# pythonominatim

./: .gitignore  README.md  pyproject.toml
pythonominatim/model/: location.py  nominatim_search.py
